// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/typography/demo/basic.md correctly 1`] = `
<article
  class="ant-typography"
>
  <h1
    class="ant-typography"
  >
    Introduction
  </h1>
  <div
    class="ant-typography"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
  </div>
  <div
    class="ant-typography"
  >
    After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
    <span
      class="ant-typography"
    >
      <strong>
        uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
      </strong>
    </span>
    .
  </div>
  <h2
    class="ant-typography"
  >
    Guidelines and Resources
  </h2>
  <div
    class="ant-typography"
  >
    We supply a series of design principles, practical patterns and high quality design resources (
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     and 
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ), to help people create their product prototypes beautifully and efficiently.
  </div>
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          class="ant-typography"
          href="/docs/spec/proximity"
        >
          Principles
        </a>
      </li>
      <li>
        <a
          class="ant-typography"
          href="/docs/spec/overview"
        >
          Patterns
        </a>
      </li>
      <li>
        <a
          class="ant-typography"
          href="/docs/resources"
        >
          Resource Download
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-typography"
  >
    Press 
    <span
      class="ant-typography"
    >
      <kbd>
        Esc
      </kbd>
    </span>
     to exit...
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <h1
    class="ant-typography"
  >
    介绍
  </h1>
  <div
    class="ant-typography"
  >
    蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
  </div>
  <div
    class="ant-typography"
  >
    随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁金服体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
    <span
      class="ant-typography"
    >
      <mark>
        『确定』和『自然』
      </mark>
    </span>
    的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
    <span
      class="ant-typography"
    >
      <strong>
        更好的用户体验
      </strong>
    </span>
    。
  </div>
  <h2
    class="ant-typography"
  >
    设计资源
  </h2>
  <div
    class="ant-typography"
  >
    我们提供完善的设计原则、最佳实践和设计资源文件（
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     和
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ），来帮助业务快速设计出高质量的产品原型。
  </div>
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          class="ant-typography"
          href="/docs/spec/proximity-cn"
        >
          设计原则
        </a>
      </li>
      <li>
        <a
          class="ant-typography"
          href="/docs/spec/overview-cn"
        >
          设计模式
        </a>
      </li>
      <li>
        <a
          class="ant-typography"
          href="/docs/resources-cn"
        >
          设计资源
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-typography"
  >
    <blockquote>
      AntV 是蚂蚁金服全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
    </blockquote>
    <pre>
      AntV 是蚂蚁金服全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
    </pre>
  </div>
  <div
    class="ant-typography"
  >
    按
    <span
      class="ant-typography"
    >
      <kbd>
        Esc
      </kbd>
    </span>
    键退出阅读……
  </div>
</article>
`;

exports[`renders ./components/typography/demo/ellipsis.md correctly 1`] = `
<button
  aria-checked="true"
  class="ant-switch ant-switch-checked"
  role="switch"
  type="button"
>
  <div
    class="ant-switch-handle"
  />
  <span
    class="ant-switch-inner"
  />
</button>
`;

exports[`renders ./components/typography/demo/ellipsis-debug.md correctly 1`] = `
<button
  aria-checked="true"
  class="ant-switch ant-switch-checked"
  role="switch"
  type="button"
>
  <div
    class="ant-switch-handle"
  />
  <span
    class="ant-switch-inner"
  >
    Long Text
  </span>
</button>
`;

exports[`renders ./components/typography/demo/ellipsis-middle.md correctly 1`] = `
<span
  aria-label="In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of"
  class="ant-typography ant-typography-ellipsis ant-typography-single-line"
  style="max-width: 100%;"
>
  In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of
  development.
  <span
    aria-hidden="true"
    style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
  >
    lg
  </span>
  <span
    aria-hidden="true"
    style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
  >
    <span
      aria-hidden="true"
    >
      ...
    </span>
    development.
  </span>
</span>
`;

exports[`renders ./components/typography/demo/interactive.md correctly 1`] = `
<div
  class="ant-typography"
>
  This is an editable text.
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders ./components/typography/demo/paragraph-debug.md correctly 1`] = `
<h1
  class="ant-typography"
>
  Introduction
</h1>
`;

exports[`renders ./components/typography/demo/suffix.md correctly 1`] = `
<div
  class="ant-slider ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="left: 0%; width: 0%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="10"
    aria-valuemin="1"
    aria-valuenow="1"
    class="ant-slider-handle"
    role="slider"
    style="left: 0%; transform: translateX(-50%);"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/typography/demo/text.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      Ant Design (default)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      Ant Design (secondary)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography ant-typography-success"
    >
      Ant Design (success)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography ant-typography-warning"
    >
      Ant Design (warning)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography ant-typography-danger"
    >
      Ant Design (danger)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography ant-typography-disabled"
    >
      Ant Design (disabled)
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <mark>
        Ant Design (mark)
      </mark>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <code>
        Ant Design (code)
      </code>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <kbd>
        Ant Design (keyboard)
      </kbd>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <u>
        Ant Design (underline)
      </u>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <del>
        Ant Design (delete)
      </del>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <strong>
        Ant Design (strong)
      </strong>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom: 8px;"
  >
    <span
      class="ant-typography"
    >
      <i>
        Ant Design (italic)
      </i>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <a
      class="ant-typography"
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
      Ant Design (Link)
    </a>
  </div>
</div>
`;

exports[`renders ./components/typography/demo/title.md correctly 1`] = `
<h1
  class="ant-typography"
>
  h1. Ant Design
</h1>
`;
